--- a/src/static/scss/tickets.scss
+++ b/src/static/scss/tickets.scss
@@ -6,36 +6,51 @@
 }
 
 article {
-  height: 100vh;
+  height: 180vh;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+  position: relative;
+
   overflow: hidden;
-  background-color: #c5b2b2;
-
-  & > * {
-    animation: slide 1s linear;
-  }
-
-  @keyframes slide {
-    from {
-      transform: translateY(100vh);
-      opacity: 0%;
-    }
-    to {
-      transform: translateY(0px);
-      opacity: 100%;
-    }
-  }
+  background-color: #726b6b;
 
   & > section {
-    width: 100%;
-    height: fit-content;
+    width: 20%;
+    height: 20%;
+
     display: grid;
     place-items: center;
     flex-basis: 100%;
-    transition: all 0.8s ease-in-out;
+
+    transition: all 0.5s ease-in-out;
+    background-color: #b8b4b4;
+
+    position: absolute;
+    border-radius: 10px;
+
+    &:nth-child(1) {
+      bottom: 13%;
+      left: 18%;
+    }
+    &:nth-child(2) {
+      top: 23%;
+      left: 7%;
+    }
+
+    &:nth-child(3) {
+      top: 23%;
+      left: 40.5%;
+    }
+
+    &:nth-child(4) {
+      top: 23%;
+      right: 7%;
+    }
+
+    &:nth-child(5) {
+      bottom: 13%;
+      right: 18%;
+    }
 
     & > button {
       display: grid;
@@ -45,8 +60,11 @@ article {
       cursor: pointer;
       outline: none;
       & > img {
+        position: absolute;
+        bottom: 10%;
+
         width: 80%;
-        filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.5));
+        filter: drop-shadow(0 15px 5px rgba(0, 0, 0, 0.5));
 
         &:hover {
           width: 80%;
@@ -69,9 +87,11 @@ article {
     position: fixed;
     left: 0;
     top: 0;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
+
+    animation: slideBG 1s linear;
 
     & > div {
       margin: 15% auto;
@@ -85,6 +105,7 @@ article {
       animation-name: modalopen;
       animation-duration: var(--modal-duration);
       overflow: hidden;
+      animation: slide 3s ease-in-out;
 
       & > header {
         display: flex;
@@ -119,13 +140,35 @@ article {
       }
     }
   }
-}
 
-@keyframes modalopen {
-  from {
-    opacity: 0;
+  @keyframes slide {
+    from {
+      transform: translateY(100vh);
+      opacity: 0%;
+    }
+    to {
+      transform: translateY(0px);
+      opacity: 100%;
+    }
   }
-  to {
-    opacity: 1;
+
+  @keyframes slideBG {
+    from {
+      transform: translateX(-100%);
+      opacity: 0%;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 100%;
+    }
+  }
+
+  @keyframes modalopen {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
