--- a/src/static/scss/tickets.scss
+++ b/src/static/scss/tickets.scss
@@ -6,7 +6,7 @@
 }
 
 article {
-  height: 180vh;
+  height: 190vh;
   width: 100%;
 
   position: relative;
@@ -15,12 +15,12 @@ article {
   background-color: #726b6b;
 
   & > section {
-    width: 20%;
+    width: 25%;
     height: 20%;
+    padding: 5px;
 
     display: grid;
     place-items: center;
-    flex-basis: 100%;
 
     transition: all 0.5s ease-in-out;
     background-color: #b8b4b4;
@@ -29,54 +29,84 @@ article {
     border-radius: 10px;
 
     &:nth-child(1) {
-      bottom: 13%;
-      left: 18%;
+      bottom: 20%;
+      left: 17.5%;
     }
     &:nth-child(2) {
-      top: 23%;
+      top: 20%;
       left: 7%;
     }
 
     &:nth-child(3) {
-      top: 23%;
-      left: 40.5%;
+      top: 20%;
+      left: 37.5%;
     }
 
     &:nth-child(4) {
-      top: 23%;
+      top: 20%;
       right: 7%;
     }
 
     &:nth-child(5) {
-      bottom: 13%;
-      right: 18%;
+      bottom: 20%;
+      right: 17.5%;
     }
 
-    & > button {
-      display: grid;
-      place-items: center;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      outline: none;
-      & > img {
-        position: absolute;
-        bottom: 10%;
+    & > * {
+      transition: 0.8s;
+    }
 
-        width: 80%;
-        filter: drop-shadow(0 15px 5px rgba(0, 0, 0, 0.5));
+    & > img {
+      position: absolute;
+      bottom: 7%;
+      width: 80%;
 
-        &:hover {
-          width: 80%;
-          filter: drop-shadow(0 0px 0px black);
-          z-index: 1;
-          background: transparent;
-        }
+      filter: drop-shadow(0 15px 5px rgba(0, 0, 0, 0.5));
+      z-index: 1;
+    }
+
+    & > div {
+      padding: 10px;
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+
+      border: 2px solid black;
+      border-top: none;
+      box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
+      z-index: 0;
+
+      overflow: hidden;
+      line-height: 1.5;
+      background-color: #b8b4b4;
+
+      transform: translateY(0%);
+      opacity: 0%;
+
+      & > h1 {
+        font-size: 30px;
+        text-align: center;
+      }
+
+      & > p {
+        font-size: 18px;
       }
     }
-    //
+
     &:hover {
-      flex-basis: 200%;
+      & > * {
+        transition: 0.8s;
+      }
+
+      & > img {
+        transform: translateY(-50%);
+      }
+
+      & > div {
+        transform: translateY(40%);
+        opacity: 100%;
+      }
     }
   }
   //
