--- a/src/static/scss/tickets.scss
+++ b/src/static/scss/tickets.scss
@@ -5,7 +5,7 @@
   --modal-color: #428bca;
 }
 
-article {
+article.tickets {
   height: 190vh;
   width: 100%;
 
@@ -15,7 +15,7 @@ article {
   background-color: #726b6b;
 
   & > section {
-    width: 25%;
+    width: 20%;
     height: 20%;
     padding: 5px;
 
@@ -29,7 +29,7 @@ article {
     border-radius: 10px;
 
     &:nth-child(1) {
-      bottom: 20%;
+      bottom: 17%;
       left: 17.5%;
     }
     &:nth-child(2) {
@@ -48,7 +48,7 @@ article {
     }
 
     &:nth-child(5) {
-      bottom: 20%;
+      bottom: 17%;
       right: 17.5%;
     }
 
@@ -100,11 +100,11 @@ article {
       }
 
       & > img {
-        transform: translateY(-50%);
+        transform: translateY(-30%);
       }
 
       & > div {
-        transform: translateY(40%);
+        transform: translateY(60%);
         opacity: 100%;
       }
     }
@@ -199,6 +199,43 @@ article {
     }
     to {
       opacity: 1;
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  article.tickets {
+    & > section {
+      width: 25%;
+
+      &:nth-child(1) {
+        bottom: 22%;
+      }
+      &:nth-child(2) {
+        top: 18%;
+      }
+
+      &:nth-child(3) {
+        top: 18%;
+      }
+
+      &:nth-child(4) {
+        top: 18%;
+      }
+
+      &:nth-child(5) {
+        bottom: 22%;
+      }
+
+      &:hover {
+        & > img {
+          transform: translateY(-50%);
+        }
+
+        & > div {
+          transform: translateY(40%);
+        }
+      }
     }
   }
 }
